--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-xl">
             <div class="container">
                 <a class="navbar-brand" href="./index.html"><img class="rounded-4" src="./imagenes/fondo.jpeg"
                         alt="Logo"></a>
