--- a/pages/productos.html
+++ b/pages/productos.html
@@ -79,36 +79,32 @@
             <h2 class="subtitulo__pagina">Alimentos</h2>
             <div class="carousel__contenedor">
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Oreos clásicas">
+                    <img src="../imagenes/oreo.jpg" alt="Oreos clásicas">
                     <h3>Oreos clásicas</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Veggie Snack Granix">
+                    <img src="../imagenes/veggiesnacks.jpeg" alt="Veggie Snack Granix">
                     <h3>Veggie Snack <br> Granix</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Pepas vegetal Trio">
+                    <img src="../imagenes/pepastrio.jpeg" alt="Pepas vegetal Trio">
                     <h3>Pepas vegetal <br> Trio</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Rapiditas">
+                    <img src="../imagenes/rapiditas.jpeg" alt="Rapiditas">
                     <h3>Rapiditas</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Rapiditas">
-                    <h3>Rapiditas</h3>
+                    <img src="../imagenes/oreo.jpg" alt="Oreos clásicas">
+                    <h3>Oreos clásicas</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Rapiditas">
-                    <h3>Rapiditas</h3>
+                    <img src="../imagenes/veggiesnacks.jpeg" alt="Veggie Snack Granix">
+                    <h3>Veggie Snack <br> Granix </h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Rapiditas">
-                    <h3>Rapiditas</h3>
-                </article>
-                <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Rapiditas">
-                    <h3>Rapiditas</h3>
+                    <img src="../imagenes/pepastrio.jpeg" alt="Pepas vegetal Trio">
+                    <h3>Pepas vegetal <br> Trio </h3>
                 </article>
             </div>
         </section>
@@ -117,27 +113,35 @@
             <h2 class="subtitulo__pagina">Cosmética</h2>
             <div class="carousel__contenedor">
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Serum">
+                    <img src="../imagenes/serumacf.jpeg" alt="Serum">
                     <h3>Serum ACF</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Agua micelar Garnier">
+                    <img src="../imagenes/aguamicelargarnier.jpeg" alt="Agua micelar Garnier">
                     <h3>Agua micelar <br> Garnier</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Protector solar Villanueve">
+                    <img src="../imagenes/protectorsolarvillenueve.jpeg" alt="Protector solar Villanueve">
                     <h3>Protector solar <br> Villanueve</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Crema todo día Natura">
+                    <img src="../imagenes/cremanatura.jpeg" alt="Crema todo día Natura">
                     <h3>Crema todo día <br> Natura</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Crema todo día Natura">
-                    <h3>Crema todo día <br> Natura</h3>
+                    <img src="../imagenes/serumacf.jpeg" alt="Serum">
+                    <h3>Serum ACF</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Crema todo día Natura">
+                    <img src="../imagenes/aguamicelargarnier.jpeg" alt="Agua micelar Garnier">
+                    <h3>Agua micelar <br> Garnier</h3>
+                </article>
+                <article class="carousel__tarjeta">
+                    <img src="../imagenes/protectorsolarvillenueve.jpeg" alt="Protector solar Villanueve">
+                    <h3>Protector solar <br> Villanueve</h3>
+                </article>
+                <article class="carousel__tarjeta">
+                    <img src="../imagenes/cremanatura.jpeg" alt="Crema todo día Natura">
                     <h3>Crema todo día <br> Natura</h3>
                 </article>
             </div>
@@ -147,27 +151,35 @@
             <h2 class="subtitulo__pagina">Maquillaje</h2>
             <div class="carousel__contenedor">
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Labial Todo Moda">
+                    <img src="../imagenes/labialtodomoda.jpeg" alt="Labial Todo Moda">
                     <h3>Labial <br> Todo Moda</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Corrector Rimmel">
+                    <img src="../imagenes/correctorrimmel.jpeg" alt="Corrector Rimmel">
                     <h3>Corrector <br> Rimmel </h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Delineador Natura">
+                    <img src="../imagenes/delineadornatura.jpeg" alt="Delineador Natura">
                     <h3>Delineador <br> Natura</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Esmalte Kiki Pronails">
+                    <img src="../imagenes/kikipronails.jpeg" alt="Esmalte Kiki Pronails">
                     <h3>Esmalte <br> Kiki Pronails</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Esmalte Kiki Pronails">
-                    <h3>Esmalte <br> Kiki Pronails</h3>
+                    <img src="../imagenes/labialtodomoda.jpeg" alt="Labial Todo Moda">
+                    <h3>Labial <br> Todo Moda</h3>
                 </article>
                 <article class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Esmalte Kiki Pronails">
+                    <img src="../imagenes/correctorrimmel.jpeg" alt="Corrector Rimmel">
+                    <h3>Corrector <br> Rimmel </h3>
+                </article>
+                <article class="carousel__tarjeta">
+                    <img src="../imagenes/delineadornatura.jpeg" alt="Delineador Natura">
+                    <h3>Delineador <br> Natura</h3>
+                </article>
+                <article class="carousel__tarjeta">
+                    <img src="../imagenes/kikipronails.jpeg" alt="Esmalte Kiki Pronails">
                     <h3>Esmalte <br> Kiki Pronails</h3>
                 </article>
             </div>
