Página de Lugares responsive, aplicación de recursos de sass y edición de textos

--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -164,17 +164,17 @@
     </main>
 
     <footer>
-        <div class="footer__total">
+        <div class="footer">
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
                     <li>
-                        <div class="navegador"><a href="../index.html">Inicio</a></div>
+                        <div class="navegador"><a href="index.html">Inicio</a></div>
                     </li>
-                    <li><a href="./informacion.html">Información</a></li>
-                    <li><a href="./productos.html">Productos</a></li>
-                    <li><a href="./lugares.html">Lugares</a></li>
-                    <li><a href="./noticias.html">Noticias</a></li>
+                    <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
+                    <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
+                    <li><a class="footer__link" href="./pages/noticias.html">Noticias</a></li>
                 </ul>
             </div>
 
