--- a/pages/lugares.html
+++ b/pages/lugares.html
@@ -51,93 +51,180 @@
 
     <main>
         <h2 class="titulo__pagina">Lugares para comer vegano</h2>
-        <section>
-            <h2 class="subtitulo__pagina">CABA</h2>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+        <h3 class="titulo-zona">CABA</h3>
+        <section class="zona">   
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 1</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
                     consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
                     reprehenderit cum.</p>
             </article>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 2</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
                     consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
                     reprehenderit cum.</p>
             </article>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
                     consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
                     reprehenderit cum.</p>
             </article>
-        </section>
-        <section>
-            <h2 class="subtitulo__pagina">Neuquén</h2>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
                     consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
                     reprehenderit cum.</p>
             </article>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
                     consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
                     reprehenderit cum.</p>
             </article>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
                     consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
                     reprehenderit cum.</p>
             </article>
-        </section>
-        <section>
-            <h2 class="subtitulo__pagina">Córdoba</h2>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
-            </article>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
-            </article>
-            <article>
-                <img src="../imagenes/imagen.png" alt="">
-                <h3>Restaurant 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
                     consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
                     reprehenderit cum.</p>
             </article>
         </section>
+
+        <h3 class="titulo-zona">Neuquén</h3>
+        <section class="zona">   
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 1</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 2</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+        </section>
+
+        <h3 class="titulo-zona">Cordoba</h3>
+        <section class="zona">   
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 1</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 2</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+            <article class="zona__card">
+                <img class="zona__img" src="../imagenes/imagen.png" alt="">
+                <h4 class="zona__titulo">Restaurant 3</h4>
+                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
+                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
+                    reprehenderit cum.</p>
+            </article>
+        </section>
+
     </main>
 
 
     <footer>
-        <div class="footer__total">
+        <div class="footer">
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
                     <li>
-                        <div class="navegador"><a href="../index.html">Inicio</a></div>
+                        <div class="navegador"><a href="index.html">Inicio</a></div>
                     </li>
-                    <li><a href="./informacion.html">Información</a></li>
-                    <li><a href="./productos.html">Productos</a></li>
-                    <li><a href="./lugares.html">Lugares</a></li>
-                    <li><a href="./noticias.html">Noticias</a></li>
+                    <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
+                    <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
+                    <li><a class="footer__link" href="./pages/noticias.html">Noticias</a></li>
                 </ul>
             </div>
 
