--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -54,25 +54,25 @@
         <h2 class="titulo__pagina">Noticias sobre el veganismo</h2>
         <section>
             <h3 class="subtitulo__pagina">Ultimas noticias</h3>
-            <div class="carousel__contenedor">
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/noticia.webp" alt="Billie Eilish lanza zapatillas">
+            <div class="noticias">
+                <div class="noticias__tarjeta">
+                    <img class="noticias__img" src="../imagenes/noticia.webp" alt="Billie Eilish lanza zapatillas">
                     <h4>Billie Eilish lanza unas zapatillas con Nike </h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet quam culpa quaerat quidem vel?
                         Quo,
                         illum necessitatibus exercitationem explicabo rerum quam architecto adipisci natus quidem error,
                         sint consectetur dolorem impedit!</p>
                 </div>
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/kitkat.webp" alt="Última noticia 2">
+                <div class="noticias__tarjeta">
+                    <img class="noticias__img" src="../imagenes/kitkat.webp" alt="Última noticia 2">
                     <h4>Noticia 2</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet quam culpa quaerat quidem vel?
                         Quo,
                         illum necessitatibus exercitationem explicabo rerum quam architecto adipisci natus quidem error,
                         sint consectetur dolorem impedit!</p>
                 </div>
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/chia.jpg" alt="Última noticia 3">
+                <div class="noticias__tarjeta">
+                    <img class="noticias__img" src="../imagenes/chia.jpg" alt="Última noticia 3">
                     <h4>Noticia 3</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet quam culpa quaerat quidem vel?
                         Quo,
@@ -176,17 +176,17 @@
     </main>
 
     <footer>
-        <div class="footer__total">
+        <div class="footer">
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
                     <li>
-                        <div class="navegador"><a href="../index.html">Inicio</a></div>
+                        <div class="navegador"><a href="index.html">Inicio</a></div>
                     </li>
-                    <li><a href="./informacion.html">Información</a></li>
-                    <li><a href="./productos.html">Productos</a></li>
-                    <li><a href="./lugares.html">Lugares</a></li>
-                    <li><a href="./noticias.html">Noticias</a></li>
+                    <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
+                    <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
+                    <li><a class="footer__link" href="./pages/noticias.html">Noticias</a></li>
                 </ul>
             </div>
 
