--- a/pages/productos.html
+++ b/pages/productos.html
@@ -77,32 +77,32 @@
 
         <section>
             <h2 class="subtitulo__pagina">Alimentos</h2>
-            <div class="carousel__contenedor">
-                <article class="carousel__tarjeta">
+            <div class="producto">
+                <article class="producto__card">
                     <img src="../imagenes/oreo.jpg" alt="Oreos clásicas">
                     <h3>Oreos clásicas</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/veggiesnacks.jpeg" alt="Veggie Snack Granix">
                     <h3>Veggie Snack <br> Granix</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/pepastrio.jpeg" alt="Pepas vegetal Trio">
                     <h3>Pepas vegetal <br> Trio</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/rapiditas.jpeg" alt="Rapiditas">
                     <h3>Rapiditas</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/oreo.jpg" alt="Oreos clásicas">
                     <h3>Oreos clásicas</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/veggiesnacks.jpeg" alt="Veggie Snack Granix">
                     <h3>Veggie Snack <br> Granix </h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/pepastrio.jpeg" alt="Pepas vegetal Trio">
                     <h3>Pepas vegetal <br> Trio </h3>
                 </article>
@@ -111,36 +111,36 @@
 
         <section>
             <h2 class="subtitulo__pagina">Cosmética</h2>
-            <div class="carousel__contenedor">
-                <article class="carousel__tarjeta">
+            <div class="producto">
+                <article class="producto__card">
                     <img src="../imagenes/serumacf.jpeg" alt="Serum">
                     <h3>Serum ACF</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/aguamicelargarnier.jpeg" alt="Agua micelar Garnier">
                     <h3>Agua micelar <br> Garnier</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/protectorsolarvillenueve.jpeg" alt="Protector solar Villanueve">
                     <h3>Protector solar <br> Villanueve</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/cremanatura.jpeg" alt="Crema todo día Natura">
                     <h3>Crema todo día <br> Natura</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/serumacf.jpeg" alt="Serum">
                     <h3>Serum ACF</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/aguamicelargarnier.jpeg" alt="Agua micelar Garnier">
                     <h3>Agua micelar <br> Garnier</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/protectorsolarvillenueve.jpeg" alt="Protector solar Villanueve">
                     <h3>Protector solar <br> Villanueve</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/cremanatura.jpeg" alt="Crema todo día Natura">
                     <h3>Crema todo día <br> Natura</h3>
                 </article>
@@ -149,36 +149,36 @@
 
         <section>
             <h2 class="subtitulo__pagina">Maquillaje</h2>
-            <div class="carousel__contenedor">
-                <article class="carousel__tarjeta">
+            <div class="producto">
+                <article class="producto__card">
                     <img src="../imagenes/labialtodomoda.jpeg" alt="Labial Todo Moda">
                     <h3>Labial <br> Todo Moda</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/correctorrimmel.jpeg" alt="Corrector Rimmel">
                     <h3>Corrector <br> Rimmel </h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/delineadornatura.jpeg" alt="Delineador Natura">
                     <h3>Delineador <br> Natura</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/kikipronails.jpeg" alt="Esmalte Kiki Pronails">
                     <h3>Esmalte <br> Kiki Pronails</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/labialtodomoda.jpeg" alt="Labial Todo Moda">
                     <h3>Labial <br> Todo Moda</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/correctorrimmel.jpeg" alt="Corrector Rimmel">
                     <h3>Corrector <br> Rimmel </h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/delineadornatura.jpeg" alt="Delineador Natura">
                     <h3>Delineador <br> Natura</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/kikipronails.jpeg" alt="Esmalte Kiki Pronails">
                     <h3>Esmalte <br> Kiki Pronails</h3>
                 </article>
@@ -187,28 +187,28 @@
 
         <section>
             <h2 class="subtitulo__pagina">Calzado y carteras</h2>
-            <div class="carousel__contenedor">
-                <article class="carousel__tarjeta">
+            <div class="producto">
+                <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Gorrión carteras">
                     <h3>Gorrión <br> Carteras</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Indica Shoes calzado">
                     <h3>Indica Shoes<br> Calzado </h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Santa Clara carteras">
                     <h3>Santa Clara <br> Carteras</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Maitina calzado">
                     <h3>Maitina <br> Calzado</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Maitina calzado">
                     <h3>Maitina <br> Calzado</h3>
                 </article>
-                <article class="carousel__tarjeta">
+                <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Maitina calzado">
                     <h3>Maitina <br> Calzado</h3>
                 </article>
@@ -218,17 +218,17 @@
     </main>
 
     <footer>
-        <div class="footer__total">
+        <div class="footer">
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
                     <li>
-                        <div class="navegador"><a href="../index.html">Inicio</a></div>
+                        <div class="navegador"><a href="index.html">Inicio</a></div>
                     </li>
-                    <li><a href="./informacion.html">Información</a></li>
-                    <li><a href="./productos.html">Productos</a></li>
-                    <li><a href="./lugares.html">Lugares</a></li>
-                    <li><a href="./noticias.html">Noticias</a></li>
+                    <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
+                    <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
+                    <li><a class="footer__link" href="./pages/noticias.html">Noticias</a></li>
                 </ul>
             </div>
 
