--- a/index.html
+++ b/index.html
@@ -54,47 +54,43 @@
     <main>
 
         <div class="contenedor__inicio">
-            <div class="caja__inicio">
-                <div class="img__inicio"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="vegano"></div>
+            <div class="inicio">
+                <div class="inicio__img"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="Ternero tomando leche"></div>
                 <div>
-                    <h3>¿Por qué veganismo?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis minus eveniet accusantium non,
-                        quo
-                        architecto laboriosam vero facilis culpa nostrum reiciendis id doloremque rerum itaque possimus
-                        animi similique quidem quod.
+                    <h3>Que ofrece Pagina Vegana?</h3>
+                    <p>Este sitio web va a ser el gran aliado de la persona vegana o de familia y amigos que quieran entender este hermoso mundo de empatía. Aca vas a poder encontrar información sobre el veganismo, noticias, productos veganos de todo tipo y lugares donde encontrar comida rica para comer.
                     </p>
                 </div>
             </div>
-            <div class="caja__inicio">
-                <div><img src="./imagenes/oreo.jpg" alt="Oreos clásicas"></div>
+            <div class="inicio">
+                <div class="inicio__img"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="Ternero tomando leche"></div>
                 <div>
-                    <h3>Producto novedad</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis minus eveniet accusantium non,
-                        quo
-                        architecto laboriosam vero facilis culpa nostrum reiciendis id doloremque rerum itaque possimus
-                        animi similique quidem quod.
+                    <h3 class="inicio_titulo">¿Por qué veganismo?</h3>
+                    <p class="inicio_texto">El veganismo es una filosofía y forma de vida que busca excluir, en la medida de lo posible y practicable, todas las formas de explotación y crueldad hacia los animales, incluyendo su uso para la comida, ropa, o cualquier otro propósito.
                     </p>
                 </div>
             </div>
-            <div class="caja__inicio">
-                <div><img src="./imagenes/ladov.jpeg" alt="Foto del restaurant"></div>
+            <div class="inicio">
+                <div class="inicio__img"><img src="./imagenes/oreo.jpg" alt="Oreos clásicas"></div>
                 <div>
-                    <h3>Restaurant recomedado</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis minus eveniet accusantium non,
-                        quo
-                        architecto laboriosam vero facilis culpa nostrum reiciendis id doloremque rerum itaque possimus
-                        animi similique quidem quod.
+                    <h3 class="inicio_titulo">Oreos veganas</h3>
+                    <p class="inicio_texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, sint? Sequi ipsa cum natus. Obcaecati, deleniti, sint neque recusandae facilis blanditiis earum molestiae veniam nemo eveniet maxime in, quia aperiam.
                     </p>
                 </div>
             </div>
-            <div class="caja__inicio">
-                <div><img src="./imagenes/kitkat.jpg" alt="noticia vegana"></div>
+            <div class="inicio">
+                <div class="inicio__img"><img src="./imagenes/ladov.jpeg" alt="Foto del restaurant"></div>
                 <div>
-                    <h3>Última noticia vegana</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis minus eveniet accusantium non,
-                        quo
-                        architecto laboriosam vero facilis culpa nostrum reiciendis id doloremque rerum itaque possimus
-                        animi similique quidem quod.
+                    <h3 class="inicio_titulo">Restaurant recomedado</h3>
+                    <p class="inicio_texto">Este restaurant está ubicado en la ciudad de Buenos Aires, en el barrio de Palermo, calle Honduras 4969. Se caracteriza por ser un lugar muy instagrameable, con hermosos lugares para sacarse altas fotos. La comida es estilo "Street Food" y tiene una barra de tragos espectacular.
+                    </p>
+                </div>
+            </div>
+            <div class="inicio">
+                <div class="inicio__img"><img src="./imagenes/kitkat.jpg" alt="noticia vegana"></div>
+                <div>
+                    <h3 class="inicio_titulo">Nuevo KitKat vegano</h3>
+                    <p class="inicio_texto">La marca Nestle sacó un nuevo chocolate KitKat, versión vegana.
                     </p>
                 </div>
             </div>
@@ -104,17 +100,17 @@
 
 
     <footer>
-        <div class="footer__total">
+        <div class="footer">
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
                     <li>
                         <div class="navegador"><a href="index.html">Inicio</a></div>
                     </li>
-                    <li><a href="./pages/informacion.html">Información</a></li>
-                    <li><a href="./pages/productos.html">Productos</a></li>
-                    <li><a href="./pages/lugares.html">Lugares</a></li>
-                    <li><a href="./pages/noticias.html">Noticias</a></li>
+                    <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
+                    <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
+                    <li><a class="footer__link" href="./pages/noticias.html">Noticias</a></li>
                 </ul>
             </div>
 
